--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tv_series">TV Series</string>
     <string name="search">search</string>
     <string name="search_series_by_name">Search series by name</string>
+    <string name="back">back</string>
 </resources>
